--- a/Lab1sem3prog/Lab1sem3prog/Lab1sem3prog.vcxproj
+++ b/Lab1sem3prog/Lab1sem3prog/Lab1sem3prog.vcxproj
@@ -131,6 +131,7 @@
     <ClCompile Include="ListNode.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="demo.h" />
     <ClInclude Include="ListNode.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
